# Hydeno-Framework

./: .gitignore  README.md  compose.yaml  pyproject.toml
DataPipeline/: .dockerignore  Dockerfile  README.md  pyproject.toml
DataPipeline/config/: dataset.yaml  global.yaml  link.yaml
DataPipeline/src/: __main__.py  cli.py  config.py  dataset.py  features.py
DataPipeline/src/linkage/: __init__.py  model.py  predict.py  train.py
DataPipeline/tests/: test_config.py  test_dataset.py
DataPipeline/tests/linkage/: test_model.py
EnsembleModels/: Dockerfile  README.md  pyproject.toml
EnsembleModels/notebooks/: 1-catBoost.ipynb  1-lightGBM.ipynb  1-randomForest.ipynb  1-xgboost.ipynb  2-HPO.ipynb
EnsembleModels/src/: __init__.py  config.py  dataset.py  pipeline.py  report.py
EnsembleModels/src/algorithms/: __init__.py  ensemble.py  sampler.py
models/: splink.json
